--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #cacaca;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -60,9 +60,9 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    
   }
   button {
-    background-color: #f9f9f9;
+    
   }
 }
