--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -5,31 +5,87 @@
   height: 100vh;
 }
 
+.page {
+  min-height: 1200px;
+
+  background-image: url("/blackandwhiteroses.png");
+  background-size:100%;
+  background-repeat:repeat;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+}
+
 .header {
+  color: black;
+  background-color: white;
   width: 100%;
+  height: auto;
+  border-bottom: 4px solid;
+  box-shadow: 0px 0px 10px 1px black;
 
   display: flex;
-  
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 20px 0px;
 }
+
 .siteTitle {
-  margin: 20px 50px;
+  font-family: GreatVibes;
+  height: 100px;
+  font-size: 48px;
+  line-height: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0px;
+}
+.logo {
+  height: 75px;
+  width: auto;
+  padding: 0px 20px;
 }
 
 nav {
-  width: 100%;
-  background-color: black;
-  border-radius: 32px;
-
+  min-height: 30px;
   display: flex;
-  justify-content: space-evenly;
+  flex-flow: row nowrap;
+  justify-content: space-around;
   align-items: center;
-  gap: 10px;
+  gap:32px;
 }
 
 .navItem {
   all: unset;
-  font-size: 28px;
-  color: white;
+  text-align: center;
+  width: auto;
+  font-size: 18px;
+  letter-spacing: 8px;
+  border-bottom: 2px solid transparent;
+  transition: all 0.25s;
+}
+
+.navItem:hover {
+  font-weight: bold;
+  border-bottom: 2px solid black;
+  cursor: pointer;
+}
+
+.content {
+  background-color: whitesmoke;
+  width: 80%;
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 50px 50px;
+  flex: 1 0 100%;
+}
+
+.frontCover {
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
 }
 
 li {
@@ -37,80 +93,234 @@ li {
 }
 
 .shop {
-  margin: 0px 40px;
-  border: 4px solid;
   display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchSection {
+  width: 90%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 20px 0px;
+  flex: 1;
+}
+
+.search {
+  min-width: 300px;
+  min-height: 30px;
+  width: 100%;
+  height: auto;
+
+  font-size: 18px;
+  border-radius: 32px;
+  text-align: start;
+  padding: 0px 12px;
+}
+
+.filters {
+  display: flex;
+  flex-flow: column nowrap;
+
+  gap: 20px;
+}
+
+label {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
 }
 
 .layout {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
-  justify-content: space-evenly;
-  margin: 16px;
-  gap: 32px;
-}
-
-.searchSection {
-  margin: 24px 8px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-flow: row nowrap;
+  grid-template-columns: repeat(3,1fr);
   justify-content: center;
   align-items: center;
-  gap: 10px;
-}
-
-.search {
-  min-width: 400px;
-  min-height: 30px;
-  width: 40%;
-  height: auto;
-}
-
-.preview {
-  width: 100%;
-  height: auto;
-
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
-
-  border: 2px solid;
-}
-
-.product {
-  width: 600px;
-  height: auto;
-  display: flex;
-  margin: 20px 40px;
-  border: 4px solid;
-}
-
-.product-info {
-  width: 100%;
-  height: 100%;
-  margin: 0px 20px;
-  padding: 0px 20px;
-  
-  display: flex;
-  flex-flow: column;
-
+  gap: 20px;
+  margin: 0px 64px;
+  flex: 2;
 }
 
 .cart {
+  width: 95%;
+  height: 100%;
+
   align-self: center;
   display: flex;
-
+  flex-flow: row nowrap;
   justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.items {
+  background-color: white;
+  padding: 0px 24px;
+  flex: 3;
+}
+
+.checkout {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+
+  background-color: whitesmoke;
+  padding: 0px 8px;
+  padding-bottom: 8px;
+  gap: 4px;
+}
+
+.checkout > div {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.checkout > button {
+  width: 100%;
+  height: 50px;
+  font-weight: bold;
+}
+.checkout > button > div {
+  width: 0%;
+  transition: all 0.5s;
+  border: 1px solid black;
+}
+.checkout > button:hover > div {
+  width: 100%;
+  border: 1px solid white;
+}
+input {
+  width: 80%;
 }
 
 img {
-  max-width: 400px;
-  max-height: 400px;
-  width: 20%;
+  max-width: 90%;
+  max-height: 90%;
+  width: fit-content;
   height: auto;
+}
+
+/* Footer CSS Properties */
+.footer {
+  max-height: 300px;
+  min-height: 250px;
+  width: 100%;
+  font-size: 14px;
+  color: white;
+  background-color: black;
+
+  display: flex;
+  flex-flow: row nowrap;
+  flex: auto;
+}
+
+.footer > div {
+  display: flex;
+  flex-flow: column;
+
+  padding-top: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  flex: 1;
+}
+
+.footer > p {
+  display: -webkit-box;
+  -webkit-line-clamp: 0;
+  -webkit-box-orient: vertical;
+}
+
+.footer > img {
+  max-width: 400px;
+  flex: 1;
+}
+
+.error {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.category-container {
+  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  margin-top: 8px;
+}
+
+.product-line > button {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.scroll-left {
+  top: 80%;
+  left: 8%;
+}
+.scroll-right {
+  top: 80%;
+  right: 8%;
+}
+
+.product-line {
+  align-self: center;
+  width: 90%;
+  height: 600px;
+  display: flex;
+  flex-flow: row nowrap;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  gap: 12px;
+  padding: 4px 0px;
+  margin-top: 8px;
+  border-left: 4px solid black;
+  border-right: 4px solid black;
+}
+
+.product-line > .preview {
+  min-width: 350px;
+}
+.product-line-header {
+  align-self: center;
+  width: 90%;
+  display: flex;
+}
+.product-line-header > div {
+  border: 2px solid black;
+  width: 100%;
+  height: 0px;
+  align-self: center;
+}
+
+.nav-product-button {
+  all: unset;
+  font-size: 24px;
+  letter-spacing: 8px;
+  border-bottom: 2px solid transparent;
+  transition: all 0.25s;
+}
+
+.nav-product-button:hover {
+  transform: scale(0.90);
+  border-bottom: 2px solid black;
+  font-weight: bold;
+  cursor: pointer;
 }
