--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,18 @@
+@font-face {
+  font-family: 'FiraMono';
+  src: local('FiraMono'), url(./fonts//FiraMono-Regular.ttf), format('opentype');
+  font-family: 'GreatVibes';
+  src: local('GreatVibes'), url(./fonts//GreatVibes-Regular.ttf), format('opentype');
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: FiraMono, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: black;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,11 +22,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  text-decoration: none;
 }
 
 body {
@@ -35,34 +38,25 @@ h1 {
   line-height: 1.1;
 }
 
+hr {
+  width: 100%;
+}
+
 button {
-  border-radius: 8px;
+  border-radius: 0px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.4em 1em;
   font-size: 1em;
-  font-weight: 500;
   font-family: inherit;
-  background-color: #cacaca;
+  background-color: black;
+  color: white;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: all 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    
-  }
-  button {
-    
-  }
 }
