--- a/src/components/style/Homepage.css
+++ b/src/components/style/Homepage.css
@@ -1,8 +1,8 @@
 #root {
   margin: 0 auto;
   padding: 0rem;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .page {
@@ -16,11 +16,11 @@
   align-items: center;
 }
 
-.header {
+.header-section {
   color: black;
   background-color: white;
   width: 100%;
-  height: auto;
+  height: 80px;
   border-bottom: 4px solid;
   box-shadow: 0px 0px 10px 1px black;
 
@@ -28,24 +28,68 @@
   flex-flow: row nowrap;
   justify-content: space-evenly;
   align-items: center;
-  padding: 20px 0px;
-}
+  padding: 0px 0px;
 
-.siteTitle {
+  z-index: 99;
+}
+.is-sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  animation-duration: 1.5s;
+  animation-name: move-down;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+}
+@keyframes move-down {
+  from {
+    opacity: 0;
+    transform: translateY(-200px);
+  }
+
+  to {
+      opacity: 1;
+  }
+}
+.site-title {
+  position: relative;
   font-family: GreatVibes;
-  height: 100px;
-  font-size: 48px;
+  height: 60px;
+  font-size: 36px;
+  letter-spacing: 12px;
   line-height: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-
-  margin: 0px;
+  margin-top: 25px;
 }
-.logo {
-  height: 75px;
+.site-title:hover > #logo{
+  height: 60px;
+}
+#logo {
+  align-self: center;
+  position: absolute;
+  height: 0px;
+  width: 60px;
+  left: 45%;
+  bottom:20%;
+  display: flex;
+  align-items: end;
+  transition: all 0.25s ease-in-out;
+  overflow: hidden;
+}
+#logo > img {
+  all: unset;
   width: auto;
-  padding: 0px 20px;
+  height: 60px;
+}
+#home-button {
+  all: unset;
+  transition: all 0.25s ease-in;
+}
+#home-button:hover {
+  transform: scale(1.1);
 }
 
 nav {
@@ -57,7 +101,7 @@ nav {
   gap:32px;
 }
 
-.navItem {
+.nav-header {
   all: unset;
   text-align: center;
   width: auto;
@@ -67,8 +111,7 @@ nav {
   transition: all 0.25s;
 }
 
-.navItem:hover {
-  font-weight: bold;
+.nav-header:hover {
   border-bottom: 2px solid black;
   cursor: pointer;
 }
@@ -82,122 +125,6 @@ nav {
   flex: 1 0 100%;
 }
 
-.frontCover {
-  max-width: 100%;
-  max-height: 100%;
-  width: 100%;
-}
-
-li {
-  list-style: none;
-}
-
-.shop {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.searchSection {
-  width: 90%;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  padding: 20px 0px;
-  flex: 1;
-}
-
-.search {
-  min-width: 300px;
-  min-height: 30px;
-  width: 100%;
-  height: auto;
-
-  font-size: 18px;
-  border-radius: 32px;
-  text-align: start;
-  padding: 0px 12px;
-}
-
-.filters {
-  display: flex;
-  flex-flow: column nowrap;
-
-  gap: 20px;
-}
-
-label {
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-}
-
-.layout {
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  margin: 0px 64px;
-  flex: 2;
-}
-
-.cart {
-  width: 95%;
-  height: 100%;
-
-  align-self: center;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 20px;
-}
-
-.items {
-  background-color: white;
-  padding: 0px 24px;
-  flex: 3;
-}
-
-.checkout {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  flex: 1;
-
-  background-color: whitesmoke;
-  padding: 0px 8px;
-  padding-bottom: 8px;
-  gap: 4px;
-}
-
-.checkout > div {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: center;
-}
-.checkout > button {
-  width: 100%;
-  height: 50px;
-  font-weight: bold;
-}
-.checkout > button > div {
-  width: 0%;
-  transition: all 0.5s;
-  border: 1px solid black;
-}
-.checkout > button:hover > div {
-  width: 100%;
-  border: 1px solid white;
-}
 input {
   width: 80%;
 }
@@ -211,37 +138,82 @@ img {
 
 /* Footer CSS Properties */
 .footer {
-  max-height: 300px;
-  min-height: 250px;
   width: 100%;
+  height: auto;
   font-size: 14px;
   color: white;
   background-color: black;
 
   display: flex;
-  flex-flow: row nowrap;
-  flex: auto;
+  flex-flow: column nowrap;
 }
-
-.footer > div {
+.footer > hr {
+  margin: 0px;
+}
+.top {
+  height: 300px;
   display: flex;
-  flex-flow: column;
-
-  padding-top: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
+  flex-flow: row nowrap;
+}
+.top > div {
+  display: flex;
+  flex-flow: column nowrap;
+  margin: 0px 12px;
+  gap: 8px;
   flex: 1;
 }
+.subscribe > input {
+  all: unset;
+  color: white;
+  padding: 4px 12px;
+  border-bottom: 2px solid white;
+}
+.subscribe > input:active , .subscribe > input:focus {
+  box-shadow: inset 0px 0px 4px 2px white;
+}
+.subscribe > button {
+  outline: white solid 1px ;
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 4px;
+}
+.socials {
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
-.footer > p {
+.nav-footer {
+  all: unset;
+  width: auto;
+  letter-spacing: 4px;
+  padding: 0px 12px;
+  border-bottom: 2px solid transparent;
+  transition: all 0.25s;
+}
+
+.nav-footer:hover {
+  border-bottom: 2px solid white;
+  cursor: pointer;
+}
+
+.top > p {
   display: -webkit-box;
   -webkit-line-clamp: 0;
   -webkit-box-orient: vertical;
 }
-
-.footer > img {
-  max-width: 400px;
-  flex: 1;
+.top > img {
+  all: unset;
+  max-width: 500px;
+}
+.bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0px;
+  letter-spacing: 4px;
+  gap: 4px;
 }
 
 .error {
@@ -252,6 +224,13 @@ img {
   justify-content: center;
   align-items: center;
 }
+.vl {
+  border-left:1px solid white;
+  height: 20px;
+  margin-left: -3px;
+}
+
+/* Home Page Styles */
 
 .category-container {
   position: relative;
