--- a/src/index.css
+++ b/src/index.css
@@ -43,8 +43,7 @@ hr {
 }
 
 button {
-  border-radius: 0px;
-  border: 1px solid transparent;
+  border: 0px solid transparent;
   padding: 0.4em 1em;
   font-size: 1em;
   font-family: inherit;
@@ -54,9 +53,11 @@ button {
   transition: all 0.25s;
 }
 button:hover {
-  
+  box-shadow: inset 0px 0px 3px 2px white;
 }
-button:focus,
+
+button:active,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  transform: scale(0.95);
+  outline: 4px auto black;
 }
