--- a/src/components/style/Homepage.css
+++ b/src/components/style/Homepage.css
@@ -7,10 +7,6 @@
 
 .page {
   min-height: 1200px;
-
-  background-image: url("/blackandwhiteroses.png");
-  background-size:100%;
-  background-repeat:repeat;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
@@ -118,22 +114,15 @@ nav {
 
 .content {
   background-color: whitesmoke;
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-flow: column nowrap;
-  padding: 50px 50px;
+  margin-bottom: 50px;
   flex: 1 0 100%;
 }
 
 input {
   width: 80%;
-}
-
-img {
-  max-width: 90%;
-  max-height: 90%;
-  width: fit-content;
-  height: auto;
 }
 
 /* Footer CSS Properties */
@@ -232,11 +221,58 @@ img {
 
 /* Home Page Styles */
 
+.front-cover {
+  position: relative;
+  font-family: GreatVibes;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.front-cover > .image {
+  width: 100%;
+  height: 100%;
+  background-image: url("blackandwhiteroses.png");
+  background-size: cover;
+  filter: blur(4px);
+  filter:drop-shadow(0);
+}
+.front-cover > .banner {
+  width: 100%;
+  height: 200px;
+  position: absolute;
+  background-color: whitesmoke;
+  opacity: 0.6;
+  filter: blur(2px);
+}
+.front-cover > p {
+  position: absolute;
+  width: 100%;
+  color: black;
+  font-size: 72px;
+  font-weight: bold;
+  letter-spacing: 8px;
+  text-align: center;
+}
+#cover-button {
+  font-family: FiraMono;
+  position: absolute;
+  top: 70%;
+
+  background-color: black;
+  color: white;
+  padding: 8px 24px;
+  text-align: center;
+}
+
 .category-container {
   position: relative;
   display: flex;
   flex-flow: column nowrap;
-  margin-top: 8px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4em;
 }
 
 .product-line > button {
@@ -260,23 +296,19 @@ img {
 }
 
 .product-line {
-  align-self: center;
+  height: clamp(200px, 100%, var(--max-height));
   width: 90%;
-  height: 600px;
   display: flex;
   flex-flow: row nowrap;
   overflow-x: hidden;
   scroll-behavior: smooth;
   gap: 12px;
-  padding: 4px 0px;
+  padding: 8px 16px;
   margin-top: 8px;
-  border-left: 4px solid black;
-  border-right: 4px solid black;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
 }
 
-.product-line > .preview {
-  min-width: 350px;
-}
 .product-line-header {
   align-self: center;
   width: 90%;
