--- a/src/components/style/Shop.css
+++ b/src/components/style/Shop.css
@@ -42,11 +42,14 @@
   }
   
   .layout {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    justify-content: center;
+    width: 90%;
+    height: auto;
+    align-self: center;
+
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
     align-items: center;
-    gap: 20px;
-    margin: 0px 64px;
-    flex: 2;
+    column-gap: 3%;
+    row-gap: 2vh;
   }
