--- a/src/components/style/Homepage.css
+++ b/src/components/style/Homepage.css
@@ -233,8 +233,7 @@ input {
 .front-cover > .image {
   width: 100%;
   height: 100%;
-  background-image: url("blackandwhiteroses.png");
-  background-size: cover;
+  object-fit: cover;
   filter: blur(4px);
   filter:drop-shadow(0);
 }
