--- a/src/components/style/Product.css
+++ b/src/components/style/Product.css
@@ -40,9 +40,10 @@
 }
 
 .preview-info {
-  min-height: 50px;
+  max-height: 100px;
+  min-height: 25px;
   width: 100%;
-  height: 50px;
+  height: 1%;
   
   background-color: rgb(230, 230, 230);
   display: flex;
@@ -71,14 +72,13 @@
   align-items: center;
 }
 .product-image > img {
-  width: auto;
-  height: 80%;
+  width: 70%;
+  height: auto;
 }
 .product-info {
   width: 100%;
 
   background-color: rgba(128, 128, 128, 0.20);
-  
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-evenly;
@@ -217,11 +217,11 @@
 }
 
 .price {
-  font-size: clamp(1rem, 0.7vw, 1.5rem);
+  font-size: clamp(0.4em, 0.7vw, 1.5em);
 }
 
 .title {
-  font-size: clamp(0.7rem, 0.5vw, 1.5rem);
+  font-size: clamp(0.4rem, 0.5vw, 1.5rem);
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;  
@@ -242,4 +242,20 @@ input::-webkit-inner-spin-button {
 p {
   padding: 0px 16px;
   margin: 0px;
+}
+
+@media screen and (max-width: 500px) {
+  .product {
+    flex-flow: column nowrap;
+
+  }
+  .product-image {
+    max-width: 800px;
+    max-height: 800px;
+    width: 100%;
+    height: 600px;
+  }
+  .product-image > img {
+    width: 80%;
+  }
 }
