--- a/src/components/style/Cart.css
+++ b/src/components/style/Cart.css
@@ -8,13 +8,19 @@
     justify-content: center;
     align-items: flex-start;
     gap: 20px;
-    font-size: var(--font-size);
+    font-size: var(--global-font-size);
   }
   
   .items {
+    min-height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: white;
-    padding: 0px 24px;
+    padding: 0% 2%;
     flex: 3;
+
+    display: flex;
+    flex-flow: column nowrap;
   }
   
   .checkout {
@@ -23,7 +29,6 @@
     justify-content: center;
     align-items: center;
     flex: 1;
-  
     background-color: whitesmoke;
     padding: 0px 8px;
     padding-bottom: 8px;
@@ -41,7 +46,6 @@
   .checkout > button {
     width: 100%;
     height: auto;
-    padding: 4%;
     font-weight: bold;
   }
   .checkout > button > div {
