--- a/src/components/style/Product.css
+++ b/src/components/style/Product.css
@@ -1,11 +1,13 @@
 :root {
-  --max-height: clamp(200px,30vw,600px);
-  --max-width: clamp(100px,20vw,500px);
+  --preview-font-size: clamp(0.8em, 1vw, 1.2em);
+  --product-font-size: clamp(0.8em, 1vw, 1.2em);
 }
 
 .preview {
-  height: clamp(200px, 100%, var(--max-height));
-  width: clamp(100px, 100%, var(--max-width));
+  min-height: 150px;
+  min-width: 20vw;
+  width: 20vw;
+  height: 60vh;
   outline: 2px solid black;
   transition: all 0.25s ease-out;
 
@@ -23,8 +25,10 @@
 }
 
 .preview-image {
-  height: calc(var(--max-height) - 50px);
-  width: var(--max-width);
+  min-height: 100px;
+  min-width: 100px;
+  width: 100%;
+  height: 100%;
   box-shadow:inset 0 0em 0em black;
   background-color: white;
   transition: all 0.5s ease-out;
@@ -32,11 +36,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 1 1 auto;
+  flex: 1;
 }
 .preview-image > img {
-  height: clamp(100px, 80% , 550px);
-  width: clamp(100px, 80% , 500px);
+  max-height: 80%;
+  min-width: 100px;
+  height: auto;
+  width: 80%;
 }
 
 .preview-info {
@@ -49,12 +55,14 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
+  flex: 1;
 }
 /* Product Page Styles */
 .product {
   background-color: white;
   width: 100%;
   height: 100%;
+  font-size: var(--global-font-size);
 
   display: flex;
   flex-flow: row nowrap;
@@ -62,17 +70,22 @@
 
 .product-image {
   background-color: white;
-  max-width: 800px;
-  max-height: 800px;
-  width: 100%;
-  height: 800px;
+  max-height: 80vh;
+  max-width: 80vw;
+  min-width: 400px;
+  min-height: 800px;
+  height: 100vh;
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 2vw;
+  flex: 2;
 }
 .product-image > img {
-  width: 70%;
+  max-height: 100%;
+  min-width: 400px;
+  width: 50%;
   height: auto;
 }
 .product-info {
@@ -105,6 +118,7 @@
   height: auto;
 }
 .options > div {
+
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-evenly;
@@ -114,11 +128,12 @@
 
 .p-button {
   all: unset;
+  min-height: 30px;
   width: 80px;
-  height: 25px;
   text-align: center;
   border: 2px solid transparent;
-  transition: all 0.5 ease-in-out;
+  transition: all 0.25s ease-in-out;
+  flex: 1;
 }
 .p-button:hover {
   font-weight: bold;
@@ -161,8 +176,9 @@
 /* Cart Styles for Products */
 .cart-product {
   background-color: white;
+  min-height: 150px;
   width: 100%;
-  height: 150px;
+  height: 20vh;
 
   display: flex;
   flex-flow: row nowrap;
@@ -172,10 +188,10 @@
 }
 
 .cart-product-image {
-  max-width: 200px;
-  max-height: 200px;
-  width: 100%;
-  height: 150px;
+  min-height: 200px;
+  min-width: 200px;
+  width: 15vw;
+  height: 15vh;
   margin: auto;
   display: flex;
   justify-content: center;
@@ -184,7 +200,9 @@
 }
 
 .cart-product-image > img {
-  height: 80%;
+  max-height: 100%;
+  min-width: 200px;
+  height: auto;
   width: 50%;
 }
 
@@ -217,11 +235,11 @@
 }
 
 .price {
-  font-size: clamp(0.4em, 0.7vw, 1.5em);
+  font-size: var(--preview-font-size);
 }
 
 .title {
-  font-size: clamp(0.4rem, 0.5vw, 1.5rem);
+  font-size: var(--preview-font-size);
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;  
