--- a/src/components/style/Cart.css
+++ b/src/components/style/Cart.css
@@ -57,3 +57,12 @@
     width: 100%;
     border: 1px solid white;
   }
+
+  @media screen and (max-width: 500px) {
+    .cart {
+      flex-flow: column-reverse nowrap;
+      justify-content: center;
+      align-items: center;
+    }
+    
+  }
