--- a/src/components/style/Product.css
+++ b/src/components/style/Product.css
@@ -7,7 +7,7 @@
   min-height: 150px;
   min-width: 20vw;
   width: 20vw;
-  height: 60vh;
+  height: clamp(20vh,40vw,60vh);
   outline: 2px solid black;
   transition: all 0.25s ease-out;
 
@@ -46,10 +46,10 @@
 }
 
 .preview-info {
-  max-height: 100px;
+  max-height: 5vh;
   min-height: 25px;
   width: 100%;
-  height: 1%;
+  height: 100%;
   
   background-color: rgb(230, 230, 230);
   display: flex;
@@ -263,17 +263,43 @@ p {
 }
 
 @media screen and (max-width: 500px) {
+  .preview {
+    min-height: 50vh;
+    min-width: 90vw;
+    width: auto;
+    height: 100%;
+  }
   .product {
     flex-flow: column nowrap;
-
   }
+
   .product-image {
-    max-width: 800px;
-    max-height: 800px;
+    max-width: 200px;
+    min-height: 600px;
+    min-width: 100vw;
     width: 100%;
-    height: 600px;
+    height: 400px;
+    padding: 0px;
   }
   .product-image > img {
+    min-width: 100px;
     width: 80%;
+    height: auto;
+  }
+
+  .cart-product {
+    flex-flow: column nowrap;
+    min-height: 350px;
+  }
+  .cart-product-info {
+    flex-flow: column nowrap;
+  }
+  .cart-product-info > .right {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 50px;
+  }
+  .p-button {
+    width: 50px;
   }
 }
